# linuxfaq-axum

./: Cargo.toml  README.md
public_html/: index.css  index.html  index.js
src/: main.rs
