[package]
name = "linuxfaq-website"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.3" }
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
mime_guess = "2.0.4"
include_dir = "0.7.3"
git2 = "0.16.1"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["full"] }